--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-shoppingList="20000">Gifft to mom</li>
+		<li data-shoppingList="10000"> Gift to dad</li>
+		<li data-shoppingList="10000">Gift to brother</li>
+	</ol>
+	<ul>
+		<li data-holidayList>Goa</li>
+		<li data-holidayList>coorg</li>
+		<li data-holidayList>ladhak on bike</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
